azure_deploy/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: default
spec:
  type: LoadBalancer # This will ask Azure for an IP address you can use
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
